<resources>
    <string name="app_name">Practica_login_api</string>

    <!--LOGIN-->

    <!--Text View-->
    <string name="tvInicioSesion">Inicio de sesión</string>
    <string name="tvNombreApp">ConstruYa</string>
    <string name="tvUser">Correo electrónico:</string>
    <string name="tvPass">Contraseña:</string>
    <!--Edit Text-->
    <string name="etUser"></string>
    <string name="etPass"></string>
    <!--Boton-->
    <string name="btnOlvidePss">¿Haz olvidado la contraseña?</string>
    <string name="btnResgistro">Registrar</string>
    <string name="btnIngresar">Ingresar</string>

    <!--REGISTRO-->

    <!--Text view-->
    <string name="tvRegistro">Registro</string>
    <string name="tvUser_registro">Usuario</string>
    <string name="tvFull_name">Nombre completo</string>
    <string name="tvCorreo">Correo electrónico</string>
    <string name="tvPss">Contraseña</string>
    <string name="tvPss2">Confirmar contraseña</string>

    <!--Radio Button-->
    <string name="cbCondiciones">Confirmar términos y condiciones</string>

    <!--Edit Text-->
    <string name="etRegistro">Registro</string>
    <string name="etFull_name"></string>
    <string name="etCorreo"></string>
    <string name="etPss"></string>
    <string name="etPss2"></string>

    <!--Button-->
    <string name="btnRegistrar">Registrar</string>
    <string name="btnCerrar"></string>

    <!--RECUPERAR CONTRASEÑA-->
    <string name="tvRecuperarContraseña">Recuperar Contraseña</string>
    <string name="tvOlvidePss">Recuperar contraseña</string>
    <string name="btnEnviar">Enviar</string>
    <string name="etNombresApellidos"></string>

    <!--TERMINOS Y CONDICIONES-->
    <string name="tvterminos">Terminos y condiciones</string>
    <string name="tvterms_and_conditions">
        Al usar esta aplicación, aceptas los siguientes términos y condiciones:

        1. **Tratamiento de Datos Personales:**
            Nos comprometemos a proteger tu privacidad. Toda la información proporcionada será utilizada con fines exclusivos de esta aplicación.

        2. **Uso Responsable:**
            Te comprometes a utilizar esta aplicación de manera responsable y respetar los derechos de otros usuarios.

        3. **Actualizaciones y Cambios:**
            Nos reservamos el derecho de actualizar o cambiar estos términos y condiciones en cualquier momento. Se te notificará sobre cambios significativos.

        4. **Seguridad de la Cuenta:**
            Eres responsable de mantener la seguridad de tu cuenta y contraseña. Cualquier actividad realizada con tu cuenta será tu responsabilidad.

        Al continuar, aceptas estos términos y condiciones. Si no estás de acuerdo, por favor, deja de utilizar la aplicación.
    </string>
    <string name="irLogin"></string>
    <string name="btnirRegistro">Acepto</string>

    <!--MENU-->
    <string name="btnInsertar">Agregar productos</string>
    <string name="btnActualizar">Actualizar productos</string>
    <string name="btnEliminar">Eliminar productos</string>
    <string name="btnSalir">Cerrar sesión</string>

    <!--INSERTAR PRODUCTOS & UPDATE PRODUCTOS & DELETE PRODUCTOS-->
    <string name="tvInsertar">Agregar productos</string>
    <string name="tvActualizar">Actualizar productos</string>
    <string name="tvBorrar">Eliminar productos</string>

    <string name="tvNombreProduct">Nombre del producto</string>
    <string name="tvSKUProduct">Código del producto</string>
    <string name="tvPrecioProduct">Precio del producto</string>
    <string name="tvImagenProduct">Url imagen del producto</string>

    <string name="btnInsertarProducto">Agregar producto</string>
    <string name="btnActualizarProducto">Actualizar producto</string>
    <string name="btnBorrarProducto">Borrar producto</string>





</resources>