<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Registro">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="180dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/superior_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:layout_width="80dp"
            android:id="@+id/btnCerrar"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:background="#FFFFFF"
            android:src="@drawable/cerrar_icono"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgTop"
            app:layout_constraintTop_toTopOf="parent"></ImageButton>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="40dp">

        <TextView
            android:id="@+id/tvRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvRegistro"
            android:textColor="@color/negro"
            android:textStyle="bold"
            android:textSize="32sp" />


        <TextView
            android:id="@+id/tvUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/negro"
            android:textSize="17dp"
            android:text="@string/tvUser" />


        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etCorreo"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvFull_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/negro"
            android:text="@string/tvFull_name" />



        <EditText
            android:id="@+id/etFull_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etFull_name"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/negro"
            android:text="@string/tvPass" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etPss"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:textColor="@color/negro"
            android:text="@string/tvPss2" />

        <EditText
            android:id="@+id/etPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etPss2"
            android:ems="10"
            android:inputType="text" />


        <CheckBox
            android:id="@+id/cbCondiciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cbCondiciones" />

        <Button
            android:id="@+id/btnRegistrarPersona"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="100dp"
            android:backgroundTint="@color/morado"
            android:text="@string/btnResgistro" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageVi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-160dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/piepagina" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>


