<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Menu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="180dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/superior_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:layout_width="80dp"
            android:id="@+id/btnCerrar"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:background="#FFFFFF"
            android:src="@drawable/cerrar_icono"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgTop"
            app:layout_constraintTop_toTopOf="parent"></ImageButton>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnInsertar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="18dp"
        android:backgroundTint="@color/morado"
        android:text="@string/btnInsertar" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="18dp"
        android:backgroundTint="@color/morado"
        android:text="@string/btnActualizar" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="18dp"
        android:backgroundTint="@color/morado"
        android:text="@string/btnEliminar" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="18dp"
        android:backgroundTint="@color/morado"
        android:text="@string/btnSalir" />




</LinearLayout>