<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Eliminar_productos">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="180dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/superior_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:layout_width="80dp"
            android:id="@+id/btnCerrar"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:background="#FFFFFF"
            android:src="@drawable/cerrar_icono"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgTop"
            app:layout_constraintTop_toTopOf="parent"></ImageButton>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvBorrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvBorrar"
            android:textColor="@color/negro"
            android:textStyle="bold"
            android:textSize="32sp" />


        <TextView
            android:id="@+id/tvNombreProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/negro"
            android:textSize="17dp"
            android:text="@string/tvNombreProduct" />


        <EditText
            android:id="@+id/etNombreEP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvSKUProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/negro"
            android:textSize="17dp"
            android:text="@string/tvSKUProduct" />


        <EditText
            android:id="@+id/etSkuE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/morado"
            android:text="@string/btnBorrarProducto" />


    </LinearLayout>

</LinearLayout>