<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Olvide_pss">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="180dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/superior_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:layout_width="80dp"
            android:id="@+id/btnCerrar"
            android:layout_height="100dp"
            android:layout_marginStart="50dp"
            android:background="#FFFFFF"
            android:src="@drawable/cerrar_icono"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgTop"
            app:layout_constraintTop_toTopOf="parent"></ImageButton>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Recuperar Contraseña"
        android:textSize="32sp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvUser" />


    <EditText
        android:id="@+id/etNombresApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etNombresApellidos"
        android:inputType="text" />



    <TextView
        android:id="@+id/tvPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvPass" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvPass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirmar Contraseña" />

    <EditText
        android:id="@+id/etPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />


    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btnEnviar" />


    <ImageView
        android:id="@+id/imageVi"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="-15dp"
        app:srcCompat="@drawable/piepagina" />

</LinearLayout>


